--- a/pokemon.ipynb
+++ b/pokemon.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4       60       50     65           1      False  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,27 +284,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[#                     1\n",
-      "Name          Bulbasaur\n",
-      "Type 1            Grass\n",
-      "Type 2           Poison\n",
-      "Total               318\n",
-      "HP                   45\n",
-      "Attack               49\n",
-      "Defense              49\n",
-      "Sp. Atk              65\n",
-      "Sp. Def              65\n",
-      "Speed                45\n",
-      "Generation            1\n",
-      "Legendary         False\n",
-      "Name: 0, dtype: object]\n"
+      "[]\n"
      ]
     }
    ],
@@ -321,27 +308,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#                     6\n",
-      "Name          Charizard\n",
-      "Type 1             Fire\n",
-      "Type 2           Flying\n",
-      "Total               534\n",
-      "HP                   78\n",
-      "Attack               84\n",
-      "Defense              78\n",
-      "Sp. Atk             109\n",
-      "Sp. Def              85\n",
-      "Speed               100\n",
-      "Generation            1\n",
-      "Legendary         False\n",
-      "Name: 6, dtype: object\n"
+      "#                                     6\n",
+      "Name          CharizardMega Charizard Y\n",
+      "Type 1                             Fire\n",
+      "Type 2                           Flying\n",
+      "Total                               634\n",
+      "HP                                   78\n",
+      "Attack                              104\n",
+      "Defense                              78\n",
+      "Sp. Atk                             159\n",
+      "Sp. Def                             115\n",
+      "Speed                               100\n",
+      "Generation                            1\n",
+      "Legendary                         False\n",
+      "Name: 8, dtype: object\n"
      ]
     }
    ],
@@ -355,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -377,6 +364,133 @@
     "print(tipo_pokemon())\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Grass': 37,\n",
+       " 'Fire': 24,\n",
+       " 'Bug': 52,\n",
+       " 'Normal': 37,\n",
+       " 'Poison': 13,\n",
+       " 'Water': 53,\n",
+       " 'Rock': 35,\n",
+       " 'Electric': 17,\n",
+       " 'Ghost': 22,\n",
+       " 'Ground': 19,\n",
+       " 'Psychic': 19,\n",
+       " 'Ice': 11,\n",
+       " 'Dragon': 21,\n",
+       " 'Fairy': 2,\n",
+       " 'Dark': 21,\n",
+       " 'Steel': 22,\n",
+       " 'Fighting': 7,\n",
+       " 'Flying': 2}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def funcion():\n",
+    "    dic = {}\n",
+    "    for i in range(len(df)):\n",
+    "        if df.iloc[i][\"Type 1\"] in dic:\n",
+    "            dic[df.iloc[i][\"Type 1\"]] += 1\n",
+    "        else:\n",
+    "            dic[df.iloc[i][\"Type 1\"]] = 1\n",
+    "    return dic\n",
+    "funcion()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[#                     1\n",
+      "Name          Bulbasaur\n",
+      "Type 1            Grass\n",
+      "Type 2           Poison\n",
+      "Total               318\n",
+      "HP                   45\n",
+      "Attack               49\n",
+      "Defense              49\n",
+      "Sp. Atk              65\n",
+      "Sp. Def              65\n",
+      "Speed                45\n",
+      "Generation            1\n",
+      "Legendary         False\n",
+      "Name: 0, dtype: object]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['Paras',\n",
+       " 'Parasect',\n",
+       " 'Celebi',\n",
+       " 'Lotad',\n",
+       " 'Lombre',\n",
+       " 'Ludicolo',\n",
+       " 'Lileep',\n",
+       " 'Cradily',\n",
+       " 'WormadamPlant Cloak',\n",
+       " 'RotomMow Rotom',\n",
+       " 'Sewaddle',\n",
+       " 'Swadloon',\n",
+       " 'Leavanny',\n",
+       " 'Deerling',\n",
+       " 'Sawsbuck',\n",
+       " 'Phantump',\n",
+       " 'Trevenant',\n",
+       " 'PumpkabooAverage Size',\n",
+       " 'PumpkabooSmall Size',\n",
+       " 'PumpkabooLarge Size',\n",
+       " 'PumpkabooSuper Size',\n",
+       " 'GourgeistAverage Size',\n",
+       " 'GourgeistSmall Size',\n",
+       " 'GourgeistLarge Size',\n",
+       " 'GourgeistSuper Size']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    l=buscar_pokemon_nombre()\n",
+    "    tipo = \"\"\n",
+    "    for i in range(len(df)):\n",
+    "        if l[0][\"Name\"]==df.iloc[i][\"Name\"]:\n",
+    "            tipo = df.iloc[i][\"Type 1\"]\n",
+    "    lista = []\n",
+    "    for i in range(len(df)):\n",
+    "        if tipo == df.iloc[i][\"Type 2\"]:\n",
+    "            lista.append(df.iloc[i][\"Name\"])\n",
+    "    return lista\n",
+    "fun()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
